--- a/ytl-admin/pom.xml
+++ b/ytl-admin/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ytl-monitor</artifactId>
+    <artifactId>ytl-admin</artifactId>
 
     <properties>
         <admin-server.version>2.0.3</admin-server.version>
