--- a/ytl-user-provider/pom.xml
+++ b/ytl-user-provider/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ytl-producer-user-service</artifactId>
+    <artifactId>ytl-user-provider</artifactId>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
