集集群监控

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 		<module>ytl-admin</module>
         <module>ytl-dashboard</module>
 		<module>ytl-user-consumer</module>
-	</modules>
+        <module>ytl-turbine</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
